:refactor: all .html file have been refactored to be easily edited

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
     <!-- Page content -->
     <main>
-
       <!-- """ Head """ section -->
       <section class="head bg-light-alt">
         <div class="head-location bg-light">
@@ -43,9 +42,7 @@
           <p class="head-subtitle-p pdg">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p> <!-- /head-subtitle-p -->
         </div> <!-- /.head-title -->
         <!-- Explore button -->
-        <p class="action-button-container">
-          <a class="action-button-container-a">Explorer nos restaurants</a>
-        </p> <!-- /explore-btn-container -->
+        <p class="action-button-container"><a class="action-button-container-a">Explorer nos restaurants</a></p> <!-- /explore-btn-container -->
       </section> <!-- /.head -->
 
       <!-- """ Features """ section -->
