--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -22,61 +22,37 @@
     <link rel="stylesheet" href="../css/footer.css" />
   </head>
   <body>
-    <!--
-
-        Page header
-
-    -->
+    <!-- Page header -->
     <header class="header">
-      <a href="../index.html" class="header-back-a link-black">
-        <i class="header__back fa-solid fa-arrow-left"></i>
-      </a>
-      <img class="header__img" src="../assets/logo/ohmyfood.png" />
+      <a href="../index.html" class="header-back-a link-black"><i class="header__back fa-solid fa-arrow-left"></i></a> <!-- link back -->
+      <img class="header__img" src="../assets/logo/ohmyfood.png" alt="ohmyfood logo" /> <!-- ohmyfood logo -->
     </header>
-    <main>
-      <!--
+      <main>
+        <section class="menu">
+          <img class="menu-card-img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
+          <div class="mrg-auto-container">
+            <div class="menu-container">
 
-            Restaurant menu
-
-      -->
-
-      <section class="menu">
-        <div class="mrg-auto-container">
-          <div class="menu-container">
-            <img class="menu-card__img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
-              <!--
-
-                Restaurant title
-
-              -->
+              <!-- Restaurant title -->
               <div class="menu-card__title-container">
                 <h2 class="menu-card__title">A la française</h2>
                 <i class="menu-card__heart-icon fa-regular fa-heart"></i>
               </div> <!-- ./.menu_conttainer__card-title -->
 
-            <!--
-
-                Restaurant menu category "" entrées ""
-
-            -->
+             <!-- Restaurant menu category "" entrées "" -->
             <div class="container-d-flex">
               <div class="menu-category">
-                <div class="category overall-restaurant-pres-margin">
-                  Entrées
-                  <div class="category__line overall-restaurant-pres-margin"></div>
+                <div class="category overall-restaurant-pres-margin">Entrées
+                  <div class="category__line overall-restaurant-pres-margin"></div> <!-- """ entrées """ menu line -->
                 </div> <!-- /.menu-card-category-div -->
 
                 <!-- Entrée #1 -->
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Tartare de poulpe acidulé</span>
-                    <div class="menu-item__subtitle">
-                      Aux zests d'orange
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Aux zests d'orange</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">25€</span>
-                  </div> <!-- /__price -->
+                  <div class="menu-item__price"><span class="text-medium">25€</span></div> <!-- /__price -->
                   <div class="menu-item__icon">
                     <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
                   </div> <!-- /.__icon -->
@@ -86,43 +62,27 @@
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Velouté de légumes d'antan</span>
-                    <div class="menu-item__subtitle">
-                      Carrote, panais, topinambour
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Carrote, panais, topinambour</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">25€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">25€</span></div> <!-- /__price -->
+                  <!-- Circle animated area -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
 
                 <!-- Entrée #3 -->
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Soupe à l'oignon</span>
-                    <div class="menu-item__subtitle">
-                      Revisitée
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Revisitée</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">20€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">20€</span></div> <!-- /__price -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
               </div> <!-- /.menu-category -->
 
               <div class="menu-category">
-                <!--
-
-                      Restaurant menu "" plats ""
-
-                -->
-                <div class="category overall-restaurant-pres-margin">
-                  Plats
+                <!-- Restaurant menu "" plats "" -->
+                <div class="category overall-restaurant-pres-margin">Plats
                   <div class="category__line overall-restaurant-pres-margin"></div>
                 </div> <!-- /.menu-card-category-div -->
 
@@ -130,59 +90,36 @@
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Coquilles Saint-Jacques</span>
-                    <div class="menu-item__subtitle">
-                      Accompagnées d'une purée de panais
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Accompagnées d'une purée de panais</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">25€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">25€</span></div> <!-- /__price -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
 
                 <!-- Plat #2 -->
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Magret de canard</span>
-                    <div class="menu-item__subtitle">
-                       Et parmentier de pommes de terres
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Et parmentier de pommes de terres</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">35€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">35€</span></div> <!-- /__price -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
 
                 <!-- Plat #3 -->
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Pigeonneau d'Ile-et-Vilaine</span>
-                    <div class="menu-item__subtitle">
-                       Sur son lit de gnocchis aux légumes
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Sur son lit de gnocchis aux légumes</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">44€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">44€</span></div> <!-- /__price -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
               </div> <!-- /.menu-category -->
 
               <div class="menu-category">
-                <!--
-
-                      Restaurant menu "" desserts ""
-
-                -->
-                <div class="category overall-restaurant-pres-margin">
-                  Desserts
+                <!-- Restaurant menu "" desserts "" -->
+                <div class="category overall-restaurant-pres-margin">Desserts
                   <div class="category__line overall-restaurant-pres-margin"></div>
                 </div> <!-- /.menu-card-category-div -->
 
@@ -190,13 +127,9 @@
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Pétales de violettes glaçées</span>
-                    <div class="menu-item__subtitle">
-                       Et purée de noisettes
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Et purée de noisettes</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">18€</span>
-                  </div> <!-- /__price -->
+                  <div class="menu-item__price"><span class="text-medium">18€</span></div> <!-- /__price -->
                   <div class="menu-item__icon">
                     <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
                   </div> <!-- /.__icon -->
@@ -206,51 +139,31 @@
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Fondant au chocolat</span>
-                    <div class="menu-item__subtitle">
-                       Revisité
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Revisité</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">22€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">22€</span></div> <!-- /__price -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
 
                 <!-- Dessert #3 -->
                 <article class="menu-item card d-flex">
                   <div class="menu-item__title">
                     <span class="text-medium">Tiramisu</span>
-                    <div class="menu-item__subtitle">
-                       Myrtilles et pâte d'amande
-                    </div> <!-- /.subtitle -->
+                    <div class="menu-item__subtitle">Myrtilles et pâte d'amande</div> <!-- /.subtitle -->
                   </div> <!-- ./__title -->
-                  <div class="menu-item__price">
-                    <span class="text-medium">23€</span>
-                  </div> <!-- /__price -->
-                  <div class="menu-item__icon">
-                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                  </div> <!-- /.__icon -->
+                  <div class="menu-item__price"><span class="text-medium">23€</span></div> <!-- /__price -->
+                  <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
                 </article> <!-- /.menu-item -->
                </div> <!-- /.menu-category -->
               </div> <!-- /.menu-container -->
+
+              <!-- Order button -->
+              <p class="action-button-container"><a class="action-button-container-a">Commander</a></p> <!-- /action-btn-container -->
             </div> <!-- /.mrg-auto-container -->
           </div> <!-- /.container-d-flex -->
-
-          <!--
-              Buy button
-          -->
-          <p class="action-button-container">
-            <a class="action-button-container-a">Commander</a>
-          </p> <!-- /explore-btn-container -->
       </section> <!-- /.menu -->
     </main>
-    <!--
-
-        Footer
-
-    -->
+    <!-- Footer -->
     <footer>
       <div class="mrg-auto-container">
         <h1 class="footer-title-h1">ohmyfood</h1>
