--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -22,234 +22,149 @@
     <link rel="stylesheet" href="../css/footer.css" />
   </head>
   <body>
-    <!--
-
-        Page header
-
-    -->
+    <!-- Page header -->
     <header class="header">
-      <a href="../index.html" class="header__back-link">
-        <i class="header__back fa-solid fa-arrow-left"></i>
-      </a>
-      <img class="header__img" src="../assets/logo/ohmyfood.png" />
+      <a href="../index.html" class="header__back-link"><i class="header__back fa-solid fa-arrow-left"></i></a> <!-- ./back-link -->
+      <img class="header__img" src="../assets/logo/ohmyfood.png" alt="ohmyfood logo" /> <!-- page header logo -->
     </header>
+    <!-- Whole menu container -->
     <main>
-      <main>
-        <section class="menu">
-          <img class="menu-card__img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
-          <div class="mrg-auto-container">
-            <div class="menu-container">
-              <!--
+      <section class="menu">
+        <img class="menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
+        <div class="mrg-auto-container">
+          <div class="menu-container">
+            <!-- Restaurant title -->
+            <div class="menu-card__title-container">
+              <h2 class="menu-card__title">La palette du gout</h2>
+              <i class="menu-card__heart-icon fa-regular fa-heart"></i>
+            </div> <!-- ./.menu_conttainer__card-title -->
+            <div class="container-d-flex">
+              <div class="menu-category">
 
-                    Restaurant menu
+              <!-- Restaurant menu category "" entrées "" -->
+              <div class="category overall-restaurant-pres-margin">Entrées
+                <div class="category__line  overall-restaurant-pres-margin"></div> <!-- line under " entrées " item -->
+              </div> <!-- /.menu-card-category-div -->
 
-              -->
-                <div class="menu-card__title-container">
-                  <h2 class="menu-card__title">La palette du gout</h2>
-                  <i class="menu-card__heart-icon fa-regular fa-heart"></i>
-                </div> <!-- ./.menu_conttainer__card-title -->
-                <div class="container-d-flex">
-                  <div class="menu-category">
-                  <!--
+              <!-- Entrée #1 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Fricassée d'escargot</span>
+                  <div class="menu-item__subtitle">Au piment d'espelette</div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price"><span class="text-medium">25€</span></div> <!-- /__price -->
+                <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+              </article> <!-- /.menu-item -->
 
-                      Restaurant menu category "" entrées ""
+              <!-- Entrée #2 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Foie gras de canard mi-cuit</span>
+                  <div class="menu-item__subtitle">Et ses copeaux de truffe noire</div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price"><span class="text-medium">35€</span></div> <!-- /__price -->
+                <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+              </article> <!-- /.menu-item -->
 
-                  -->
-                  <div class="category overall-restaurant-pres-margin">
-                    Entrées
-                    <div class="category__line  overall-restaurant-pres-margin"></div>
-                  </div> <!-- /.menu-card-category-div -->
+              <!-- Entrée #3 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Oeuf au plat</span>
+                  <div class="menu-item__subtitle">Assaisonné à la truffe sur lit de crême</div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price"><span class="text-medium">20€</span></div> <!-- /__price -->
+                <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+              </article> <!-- /.menu-item -->
+            </div> <!-- /.menu-category -->
 
-                  <div class="menu-list">
+            <div class="menu-category">
+            <!-- Restaurant menu category "" plats "" -->
+            <div class="category overall-restaurant-pres-margin"> Plats
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-                    <!-- Entrée #1 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Fricassée d'escargot</span>
-                        <div class="menu-item__subtitle">
-                          Au piment d'espelette
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">25€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
+            <!-- Plat #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Filet de boeuf aux herbes</span>
+                <div class="menu-item__subtitle">Accompagné de sa ribambelle de légumes</div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price"><span class="text-medium">20€</span></div> <!-- /__price -->
+              <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+            </article> <!-- /.menu-item -->
 
-                    <!-- Entrée #2 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Foie gras de canard mi-cuit</span>
-                        <div class="menu-item__subtitle">
-                          Et ses copeaux de truffe noire
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">35€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
+            <!-- Plat #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Parmentier de queue de boeuf</span>
+                <div class="menu-item__subtitle">Accompagné de sa ribambelle de légumes</div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price"><span class="text-medium">44€</span></div> <!-- /__price -->
+              <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+            </article> <!-- /.menu-item -->
 
-                    <!-- Entrée #3 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Oeuf au plat</span>
-                        <div class="menu-item__subtitle">
-                          Assaisonné à la truffe sur lit de crême
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">20€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-                  </div> <!-- /.menu-list-1 -->
-                </div> <!-- /.menu-category -->
+              <!-- Plat #3 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Filet de Turbot</span>
+                  <div class="menu-item__subtitle">
+                     Aux agrumes
+                  </div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price">
+                  <span class="text-medium">44€</span>
+                </div> <!-- /__price -->
+                <div class="menu-item__icon">
+                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                </div> <!-- /.__icon -->
+              </article> <!-- /.menu-item -->
+            </div> <!-- /.menu-category -->
 
-                <div class="menu-category">
-                <!--
+            <div class="menu-category">
+              <!-- Restaurant menu category "" Desserts "" -->
+              <div class="category overall-restaurant-pres-margin">Desserts
+                <div class="category__line overall-restaurant-pres-margin"></div>
+              </div> <!-- /.menu-card-category-div -->
 
-                    Restaurant menu category "" plats ""
+              <!-- Dessert #1 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Paris-Brest</span>
+                  <div class="menu-item__subtitle">Revisité</div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price"><span class="text-medium">18€</span></div> <!-- /__price -->
+                <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+              </article> <!-- /.menu-item -->
 
-                -->
-                  <div class="category overall-restaurant-pres-margin">
-                    Plats
-                    <div class="category__line overall-restaurant-pres-margin"></div>
-                  </div> <!-- /.menu-card-category-div -->
+              <!-- Dessert #2 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Macaron au chocolat d'exception</span>
+                  <div class="menu-item__subtitle">Et glâce à la vanille de Madagascar
+                  </div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price"><span class="text-medium">18€</span></div> <!-- /__price -->
+                <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__check-icon -->
+              </article> <!-- /.menu-item -->
 
-                  <div class="menu-list">
-                    <!-- Plat #1 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Filet de boeuf aux herbes</span>
-                        <div class="menu-item__subtitle">
-                          Accompagné de sa ribambelle de légumes
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">20€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-
-                    <!-- Plat #2 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Parmentier de queue de boeuf</span>
-                        <div class="menu-item__subtitle">
-                          Accompagné de sa ribambelle de légumes
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">44€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-
-                    <!-- Plat #3 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Filet de Turbot</span>
-                        <div class="menu-item__subtitle">
-                           Aux agrumes
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">44€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-                  </div> <!-- ./menu-list-2 -->
-                </div> <!-- /.menu-category -->
-
-                <div class="menu-category">
-                  <!--
-
-                      Restaurant menu category "" Desserts ""
-
-                  -->
-                  <div class="category overall-restaurant-pres-margin">
-                    Desserts
-                    <div class="category__line overall-restaurant-pres-margin"></div>
-                  </div> <!-- /.menu-card-category-div -->
-
-                  <idv class="menu-list">
-                    <!-- Dessert #1 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Paris-Brest</span>
-                        <div class="menu-item__subtitle">
-                           Revisité
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">18€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-
-                    <!-- Dessert #2 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Macaron au chocolat d'exception</span>
-                        <div class="menu-item__subtitle">
-                           Et glâce à la vanille de Madagascar
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">18€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-
-                    <!-- Dessert #3 -->
-                    <article class="menu-item card d-flex">
-                      <div class="menu-item__title">
-                        <span class="text-medium">Mousse au chocolat</span>
-                        <div class="menu-item__subtitle">
-                           Au piment d'espelette et à la truffe noire
-                        </div> <!-- /.subtitle -->
-                      </div> <!-- ./__title -->
-                      <div class="menu-item__price">
-                        <span class="text-medium">23€</span>
-                      </div> <!-- /__price -->
-                      <div class="menu-item__icon">
-                        <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                      </div> <!-- /.__icon -->
-                    </article> <!-- /.menu-item -->
-                  </div> <!-- /.container-d-flex -->
-                </div> <!-- / menu-list -->
-                <!--
-                    Buy button
-                -->
-                <p class="action-button-container">
-                  <a class="action-button-container-a">Commander</a>
-                </p> <!-- /explore-btn-container -->
-              </div> <!-- /.menu-category -->
-           </div> <!-- /.mrg-auto-container -->
-        </section> <!-- /.menu -->
+              <!-- Dessert #3 -->
+              <article class="menu-item card d-flex">
+                <div class="menu-item__title">
+                  <span class="text-medium">Mousse au chocolat</span>
+                  <div class="menu-item__subtitle">Au piment d'espelette et à la truffe noire</div> <!-- /.subtitle -->
+                </div> <!-- ./__title -->
+                <div class="menu-item__price"><span class="text-medium">23€</span></div> <!-- /__price -->
+                <div class="menu-item__icon"><i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i></div> <!-- /.__icon -->
+              </article> <!-- /.menu-item -->
+            </div> <!-- /.container-d-flex -->
+            <!-- Order button -->
+          </div> <!-- /.container-d-flex -->
+          <p class="action-button-container"><a class="action-button-container-a">Commander</a></p> <!-- /explore-btn-container -->
+         </div> <!-- /.menu-container -->
+        </div> <!-- /.mrg-auto-container -->
+      </section> <!-- /.menu -->
     </main>
-    <!--
-
-        Footer
-
-    -->
+    <!-- Footer -->
     <footer>
       <div class="mrg-auto-container">
         <h1 class="footer-title-h1">ohmyfood</h1>
@@ -259,7 +174,7 @@
           <li class="footer-links-list-li">Mentions légales</li>
           <li class="footer-links-list-li">Contact</li>
         </ul>
-      </div> <!-- ./mrg-auto-container --> 
+      </div> <!-- ./mrg-auto-container -->
     </footer>
   </body>
 </html>
