:feat: adding mailto on footer contact item

--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -176,7 +176,7 @@
           <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
           <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
           <li class="footer-links-list-li">Mentions légales</li>
-          <li class="footer-links-list-li">Contact</li>
+          <li class="footer-links-list-li"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </ul>
       </div> <!-- ./mrg-auto-container -->
     </footer>
