:refactor: header.css to BEM

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <div class="loader"><img src="assets/loader.gif" alt="loader image"/></div>
 
     <!-- Page header -->
-    <header><img class="header__img" src="assets/logo/ohmyfood.png" alt="logo ohmyfood" /></header>
+    <header class="header"><img class="header__img" src="assets/logo/ohmyfood.png" alt="logo ohmyfood" /></header>
 
     <!-- Page content -->
     <main>
       <!-- """ Head """ section -->
       <section class="head bg-light-alt">
-        <div class="head-location bg-light">
-            <i class="head-location-i fa-solid fa-location-dot"></i>Paris, Belleville
+        <div class="head__location bg-light">
+            <i class="head__location__i fa-solid fa-location-dot"></i>Paris, Belleville
         </div> <!-- /.head-location -->
         <div class="head-title mrg-top-none">
           <h2 class="head__title">Réservez le menu qui vous convient</h2>
-          <p class="head-subtitle-p pdg">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p> <!-- /head-subtitle-p -->
+          <p class="head__subtitle__p">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p> <!-- /head-subtitle-p -->
         </div> <!-- /.head-title -->
         <!-- Explore button -->
         <p class="action-button-container"><a class="action-button-container-a">Explorer nos restaurants</a></p> <!-- /explore-btn-container -->
