:refactor: main.sass & better CTA selector

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p class="head__subtitle__p">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p> <!-- /head-subtitle-p -->
         </div> <!-- /.head-title -->
         <!-- Explore button -->
-        <p class="action-button-container"><a class="action-button-container-a">Explorer nos restaurants</a></p> <!-- /explore-btn-container -->
+        <p class="action-button-container"><a href="#">Explorer nos restaurants</a></p> <!-- /explore-btn-container -->
       </section> <!-- /.head -->
 
       <!-- """ Features """ section -->
