:refactor: sorted css rules, using BEM for restaurants list on homepage

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       <section class="restaurants overall-padding">
         <h2 class="overall-section-titles">Restaurants</h2>
         <div class="mrg-auto-container">
-            <div class="restaurants-container">
+            <div class="restaurants__restaurants-container">
               <!-- La palette du gout -->
               <article class="restaurant mrg-md-right">
-                <div class="card card-restaurant">
-                  <div class="new">Nouveau</div>
+                <div class="card restaurant__card--restaurant">
+                  <div class="restaurant__card--restaurant__new">Nouveau</div>
                   <img src="assets/restaurants/la_palette_du_gout.jpg" />
                   <div class="flex">
                     <div>
@@ -88,8 +88,8 @@
               </article> <!-- /.restaurant -->
               <!-- La note enchantée -->
               <article class="restaurant">
-                <div class="card card-restaurant">
-                  <div class="new">Nouveau</div>
+                <div class="card restaurant__card--restaurant">
+                  <div class="restaurant__card--restaurant__new">Nouveau</div>
                   <img src="assets/restaurants/la_note_enchantee.jpg" alt="la note enchantée" />
                   <div class="flex">
                     <div>
@@ -102,7 +102,7 @@
               </article> <!-- /.restaurant -->
               <!-- A la française -->
               <article class="restaurant mrg-md-right">
-                <div class="card card-restaurant">
+                <div class="card restaurant__card--restaurant">
                   <img src="assets/restaurants/a_la_francaise.jpg" alt="retaurant a la française" />
                   <div class="flex">
                     <div>
@@ -115,7 +115,7 @@
               </article> <!-- /.restaurant -->
               <!-- Le délice des sens -->
               <article class="restaurant">
-                <div class="card card-restaurant">
+                <div class="card restaurant__card--restaurant">
                   <img src="assets/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" />
                   <div class="flex">
                     <div>
