:feat: better menu pages spacing

--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -29,9 +29,9 @@
     </header>
       <main>
         <section class="menu">
-          <img class="menu-card-img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
+          <img class="menu__menu-card-img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
           <div class="mrg-auto-container">
-            <div class="menu-container">
+            <div class="menu__menu-container">
 
               <!-- Restaurant title -->
               <div class="menu-card__title-container">
