--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -30,10 +30,10 @@
     <main>
       <!-- Whole menu container -->
       <section class="menu">
-        <img class="menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" /> <!-- menu header image -->
+        <img class="menu__menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" /> <!-- menu header image -->
         <div class="mrg-auto-container">
           <!-- head menu title -->
-          <div class="menu-container">
+          <div class="menu__menu-container">
             <div class="menu-card__title-container">
               <h2 class="menu-card__title">La note enchantée</h2>
               <i class="menu-card__heart-icon fa-regular fa-heart"></i>
