--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -30,9 +30,9 @@
     <!-- Whole menu container -->
     <main>
       <section class="menu">
-        <img class="menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
+        <img class="menu__menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
         <div class="mrg-auto-container">
-          <div class="menu-container">
+          <div class="menu__menu-container">
             <!-- Restaurant title -->
             <div class="menu-card__title-container">
               <h2 class="menu-card__title">La palette du gout</h2>
