--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -29,9 +29,9 @@
     </header>
     <main>
       <section class="menu">
-        <img class="menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
+        <img class="menu__menu-card-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
           <div class="mrg-auto-container">
-          <div class="menu-container">
+          <div class="menu__menu-container">
            <!-- Restaurant title -->
             <div class="menu-card__title-container">
               <h2 class="menu-card__title">Le délices des sens</h2>
